--- a/drivers/vector/mem/CMakeLists.txt
+++ b/drivers/vector/mem/CMakeLists.txt
@@ -33,6 +33,7 @@ set(FORMAT_DEFINITIONS ${FORMAT_DEFINITIONS} "-DMEM_ENABLED" PARENT_SCOPE)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 
 set(LIB_HHEADERS
+        ogr_mem.h
 )
 
 set(LIB_HHEADERS_PRIV
@@ -49,5 +50,5 @@ add_library(${TARGET_NAME} OBJECT ${LIB_HHEADERS} ${LIB_HHEADERS_PRIV} ${LIB_CSO
 
 # build target
 set(TARGET_OBJECTS ${TARGET_OBJECTS} $<TARGET_OBJECTS:${TARGET_NAME}> PARENT_SCOPE)
-
+install(FILES ${LIB_HHEADERS} DESTINATION ${INSTALL_INC_DIR} COMPONENT headers)
  
